Bug 319006 - Muon Crash
Summary: Muon Crash
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: libqapt (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 326923 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-28 08:24 UTC by Fatih Yazıcı
Modified: 2015-01-14 17:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fatih Yazıcı 2013-04-28 08:24:20 UTC
Application: muon-installer (2.0.0)
KDE Platform Version: 4.10.2
Qt Version: 4.8.4
Operating System: Linux 3.8.0-19-generic x86_64
Distribution: Ubuntu 13.04

-- Information about the crash:
- What I was doing when the application crashed:
Install "Midnight Commander" software and crashed. (installation successful).

The crash does not seem to be reproducible.

-- Backtrace:
Application: Muon Yazılım Merkezi (muon-installer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fc698c947c0 (LWP 2106))]

Thread 6 (Thread 0x7fc682382700 (LWP 2107)):
#0  0x00007fff403feaf7 in ?? ()
#1  0x00007fc698cab9f8 in ?? ()
#2  0x000000027c002f30 in ?? ()
#3  0x00007fc67c002860 in ?? ()
#4  0x00007fc682381b80 in ?? ()
#5  0x00007fc682381c38 in ?? ()
#6  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fc678bc1700 (LWP 3510)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fc6926f4e77 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fc6926f4ea9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fc690b7ef8e in start_thread (arg=0x7fc678bc1700) at pthread_create.c:311
#4  0x00007fc695772e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7fc66fbef700 (LWP 3511)):
#0  0x00007fff403feaf7 in ?? ()
#1  0x0000000003be8880 in ?? ()
#2  0x000000024036fbe0 in ?? ()
#3  0x00007fc67015a8c0 in ?? ()
#4  0x00007fc66fbeeb90 in ?? ()
#5  0x00007fc66fbeec48 in ?? ()
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fc66f3ee700 (LWP 3512)):
#0  0x00007fc690b810ca in __GI___pthread_mutex_lock (mutex=0x7fc668000a60) at pthread_mutex_lock.c:116
#1  0x00007fc6906eb5c1 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc6906ab493 in g_main_context_release () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc6906ac188 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc6906ac304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fc695eeb036 in QEventDispatcherGlib::processEvents (this=0x7fc6680008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007fc695ebb38f in QEventLoop::processEvents (this=this@entry=0x7fc66f3eddc0, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007fc695ebb618 in QEventLoop::exec (this=this@entry=0x7fc66f3eddc0, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007fc695dbd410 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#9  0x00007fc695dbfbec in QThreadPrivate::start (arg=0x7fc670af7300) at thread/qthread_unix.cpp:338
#10 0x00007fc690b7ef8e in start_thread (arg=0x7fc66f3ee700) at pthread_create.c:311
#11 0x00007fc695772e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7fc66e571700 (LWP 3513)):
#0  0x00007fc6906a94a9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007fc6906ab89f in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fc6906ac0fe in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fc6906ac304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fc695eeb036 in QEventDispatcherGlib::processEvents (this=0x7fc6600008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fc695ebb38f in QEventLoop::processEvents (this=this@entry=0x7fc66e570dc0, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fc695ebb618 in QEventLoop::exec (this=this@entry=0x7fc66e570dc0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fc695dbd410 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#8  0x00007fc695dbfbec in QThreadPrivate::start (arg=0x7fc670b7d090) at thread/qthread_unix.cpp:338
#9  0x00007fc690b7ef8e in start_thread (arg=0x7fc66e571700) at pthread_create.c:311
#10 0x00007fc695772e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7fc698c947c0 (LWP 2106)):
[KCrash Handler]
#6  QApt::Package::name (this=this@entry=0x0) at /build/buildd/qapt-2.0.0/src/package.cpp:226
#7  0x00007fc697f9f88f in QApt::Package::installedFilesList (this=0x0) at /build/buildd/qapt-2.0.0/src/package.cpp:447
#8  0x00007fc6806d83c4 in Application::findExecutables (this=this@entry=0x7fc67090c410) at /build/buildd/muon-2.0.0/libmuon/backends/ApplicationBackend/Application.cpp:435
#9  0x00007fc6806d8e4a in Application::menuPath (this=this@entry=0x7fc67090c410) at /build/buildd/muon-2.0.0/libmuon/backends/ApplicationBackend/Application.cpp:160
#10 0x00007fc6806d06d1 in Application::qt_metacall (this=0x7fc67090c410, _c=<optimized out>, _id=<optimized out>, _a=0x7fff4036c8f0) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/libmuon/backends/ApplicationBackend/moc_Application.cpp:87
#11 0x00007fc695ec597a in QMetaProperty::read (this=this@entry=0x7fff4036c960, object=object@entry=0x7fc67090c410) at kernel/qmetaobject.cpp:2290
#12 0x00007fc695ecf12b in QObject::property (this=this@entry=0x7fc67090c410, name=name@entry=0x435bda "menuPath") at kernel/qobject.cpp:3750
#13 0x0000000000426cc3 in ResourceDetailsWidget::setResource (this=0x1e11c80, resource=resource@entry=0x7fc67090c410) at /build/buildd/muon-2.0.0/installer/ResourceDetailsView/ResourceDetailsWidget.cpp:338
#14 0x0000000000427d55 in ResourceDetailsView::setResource (this=this@entry=0x21ccda0, resource=resource@entry=0x7fc67090c410) at /build/buildd/muon-2.0.0/installer/ResourceDetailsView/ResourceDetailsView.cpp:48
#15 0x00000000004243e9 in ResourceViewWidget::infoButtonClicked (this=0x45e8db0, resource=0x7fc67090c410) at /build/buildd/muon-2.0.0/installer/ResourceView/ResourceViewWidget.cpp:171
#16 0x00007fc695ed10ef in QMetaObject::activate (sender=0x29ffa50, m=m@entry=0x431460 <ResourceDelegate::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff4036cca0) at kernel/qobject.cpp:3539
#17 0x000000000041be70 in ResourceDelegate::infoButtonClicked (this=<optimized out>, _t1=0x7fc67090c410) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/installer/moc_ResourceDelegate.cpp:116
#18 0x000000000041beac in ResourceDelegate::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/installer/moc_ResourceDelegate.cpp:58
#19 0x00007fc695ed10ef in QMetaObject::activate (sender=0x4c39520, m=m@entry=0x4311e0 <ResourceExtender::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff4036ce20) at kernel/qobject.cpp:3539
#20 0x000000000041c0fd in ResourceExtender::infoButtonClicked (this=<optimized out>, _t1=0x7fc67090c410) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/installer/moc_ResourceExtender.cpp:118
#21 0x00007fc695ed10ef in QMetaObject::activate (sender=sender@entry=0x4be12a0, m=m@entry=0x7fc697370ca0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7fff4036cf70) at kernel/qobject.cpp:3539
#22 0x00007fc696f10c82 in QAbstractButton::clicked (this=this@entry=0x4be12a0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#23 0x00007fc696c6423e in QAbstractButtonPrivate::emitClicked (this=this@entry=0x4c54bc0) at widgets/qabstractbutton.cpp:548
#24 0x00007fc696c64a30 in QAbstractButtonPrivate::click (this=this@entry=0x4c54bc0) at widgets/qabstractbutton.cpp:541
#25 0x00007fc696c64c9c in QAbstractButton::mouseReleaseEvent (this=0x4be12a0, e=0x7fff4036d810) at widgets/qabstractbutton.cpp:1123
#26 0x00007fc6968f2a89 in QWidget::event (this=0x4be12a0, event=0x7fff4036d810) at kernel/qwidget.cpp:8375
#27 0x00007fc6968a58ec in QApplicationPrivate::notify_helper (this=this@entry=0x1bf5830, receiver=receiver@entry=0x4be12a0, e=e@entry=0x7fff4036d810) at kernel/qapplication.cpp:4567
#28 0x00007fc6968a8a33 in QApplication::notify (this=this@entry=0x7fff4036fbe0, receiver=receiver@entry=0x4be12a0, e=e@entry=0x7fff4036d810) at kernel/qapplication.cpp:4110
#29 0x00007fc6975b2af6 in KApplication::notify (this=0x7fff4036fbe0, receiver=0x4be12a0, event=0x7fff4036d810) at ../../kdeui/kernel/kapplication.cpp:311
#30 0x00007fc695ebc63e in QCoreApplication::notifyInternal (this=0x7fff4036fbe0, receiver=receiver@entry=0x4be12a0, event=event@entry=0x7fff4036d810) at kernel/qcoreapplication.cpp:946
#31 0x00007fc6968ab933 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#32 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x4be12a0, event=event@entry=0x7fff4036d810, alienWidget=alienWidget@entry=0x4be12a0, nativeWidget=nativeWidget@entry=0x1d569a0, buttonDown=buttonDown@entry=0x7fc697383308 <qt_button_down>, lastMouseReceiver=..., spontaneous=spontaneous@entry=true) at kernel/qapplication.cpp:3178
#33 0x00007fc696920ec4 in QETWidget::translateMouseEvent (this=this@entry=0x1d569a0, event=event@entry=0x7fff4036df90) at kernel/qapplication_x11.cpp:4631
#34 0x00007fc69691fef1 in QApplication::x11ProcessEvent (this=0x7fff4036fbe0, event=event@entry=0x7fff4036df90) at kernel/qapplication_x11.cpp:3746
#35 0x00007fc69694b0b2 in x11EventSourceDispatch (s=0x1bf8e00, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#36 0x00007fc6906abf05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007fc6906ac248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007fc6906ac304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007fc695eeb016 in QEventDispatcherGlib::processEvents (this=0x1bc2fd0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#40 0x00007fc69694b1ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x00007fc695ec056f in QCoreApplication::processEvents (flags=...) at kernel/qcoreapplication.cpp:1133
#42 0x00007fc697f97133 in QApt::CacheBuildProgress::Update (this=<optimized out>) at /build/buildd/qapt-2.0.0/src/cache.cpp:34
#43 0x00007fc69326b9d9 in pkgDepCache::Update(OpProgress*) () from /usr/lib/x86_64-linux-gnu/libapt-pkg.so.4.12
#44 0x00007fc69326bf21 in pkgDepCache::Init(OpProgress*) () from /usr/lib/x86_64-linux-gnu/libapt-pkg.so.4.12
#45 0x00007fc6932948c8 in pkgCacheFile::BuildDepCache(OpProgress*) () from /usr/lib/x86_64-linux-gnu/libapt-pkg.so.4.12
#46 0x00007fc693294942 in pkgCacheFile::Open(OpProgress*, bool) () from /usr/lib/x86_64-linux-gnu/libapt-pkg.so.4.12
#47 0x00007fc697f970ac in ReadOnlyOpen (Progress=<optimized out>, this=<optimized out>) at /usr/include/apt-pkg/cachefile.h:68
#48 QApt::Cache::open (this=<optimized out>) at /build/buildd/qapt-2.0.0/src/cache.cpp:79
#49 0x00007fc697f90743 in QApt::Backend::reloadCache (this=0x1c8f6c0) at /build/buildd/qapt-2.0.0/src/backend.cpp:174
#50 0x00007fc6806d19a0 in ApplicationBackend::reload (this=this@entry=0x1fb16c0) at /build/buildd/muon-2.0.0/libmuon/backends/ApplicationBackend/ApplicationBackend.cpp:170
#51 0x00007fc6806d2452 in ApplicationBackend::transactionEvent (this=0x1fb16c0, status=<optimized out>) at /build/buildd/muon-2.0.0/libmuon/backends/ApplicationBackend/ApplicationBackend.cpp:270
#52 0x00007fc6806d028b in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/libmuon/backends/ApplicationBackend/moc_ApplicationBackend.cpp:93
#53 ApplicationBackend::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/buildd/muon-2.0.0/obj-x86_64-linux-gnu/libmuon/backends/ApplicationBackend/moc_ApplicationBackend.cpp:79
#54 0x00007fc695ed10ef in QMetaObject::activate (sender=0x3bdac90, m=m@entry=0x7fc6981c7aa0 <QApt::Transaction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff4036e8a0) at kernel/qobject.cpp:3539
#55 0x00007fc697fb2681 in QApt::Transaction::statusChanged (this=<optimized out>, _t1=QApt::FinishedStatus) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transaction.cxx:285
#56 0x00007fc697fad3b8 in QApt::Transaction::updateProperty (this=0x3bdac90, type=0, variant=...) at /build/buildd/qapt-2.0.0/src/transaction.cpp:496
#57 0x00007fc697fb2a58 in QApt::Transaction::qt_static_metacall (_o=0x3bdac90, _c=<optimized out>, _id=<optimized out>, _a=0x7fff4036ec40) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transaction.cxx:160
#58 0x00007fc695ed10ef in QMetaObject::activate (sender=sender@entry=0x4be2310, m=m@entry=0x7fc6981c7b80 <OrgKubuntuQaptworkerTransactionInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x7fff4036ec40) at kernel/qobject.cpp:3539
#59 0x00007fc697fb3636 in OrgKubuntuQaptworkerTransactionInterface::propertyChanged (this=this@entry=0x4be2310, _t1=3, _t2=...) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transactiondbus.cxx:240
#60 0x00007fc697fb38ba in OrgKubuntuQaptworkerTransactionInterface::qt_static_metacall (_o=_o@entry=0x4be2310, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=4, _a=_a@entry=0x7fff4036f130) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transactiondbus.cxx:108
#61 0x00007fc697fb431f in OrgKubuntuQaptworkerTransactionInterface::qt_metacall (this=0x4be2310, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fff4036f130) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transactiondbus.cxx:159
#62 0x00007fc694f72063 in QDBusConnectionPrivate::deliverCall (this=0x1f6fdc0, object=0x4be2310, msg=..., metaTypes=..., slotIdx=9) at qdbusintegrator.cpp:951
#63 0x00007fc695ed65be in QObject::event (this=0x4be2310, e=<optimized out>) at kernel/qobject.cpp:1194
#64 0x00007fc6968a58ec in QApplicationPrivate::notify_helper (this=this@entry=0x1bf5830, receiver=receiver@entry=0x4be2310, e=e@entry=0x49c82d0) at kernel/qapplication.cpp:4567
#65 0x00007fc6968a825b in QApplication::notify (this=this@entry=0x7fff4036fbe0, receiver=receiver@entry=0x4be2310, e=e@entry=0x49c82d0) at kernel/qapplication.cpp:4428
#66 0x00007fc6975b2af6 in KApplication::notify (this=0x7fff4036fbe0, receiver=0x4be2310, event=0x49c82d0) at ../../kdeui/kernel/kapplication.cpp:311
#67 0x00007fc695ebc63e in QCoreApplication::notifyInternal (this=0x7fff4036fbe0, receiver=receiver@entry=0x4be2310, event=event@entry=0x49c82d0) at kernel/qcoreapplication.cpp:946
#68 0x00007fc695ec0171 in sendEvent (event=0x49c82d0, receiver=0x4be2310) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#69 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1bc1670) at kernel/qcoreapplication.cpp:1570
#70 0x00007fc695ec04a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1463
#71 0x00007fc695eeae83 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#72 postEventSourceDispatch (s=0x1bf7c60) at kernel/qeventdispatcher_glib.cpp:279
#73 0x00007fc6906abf05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#74 0x00007fc6906ac248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#75 0x00007fc6906ac304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#76 0x00007fc695eeb016 in QEventDispatcherGlib::processEvents (this=0x1bc2fd0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#77 0x00007fc69694b1ae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#78 0x00007fc695ebb38f in QEventLoop::processEvents (this=this@entry=0x7fff4036fab0, flags=...) at kernel/qeventloop.cpp:149
#79 0x00007fc695ebb618 in QEventLoop::exec (this=this@entry=0x7fff4036fab0, flags=...) at kernel/qeventloop.cpp:204
#80 0x00007fc695ec0cf6 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#81 0x00007fc6968a3ffc in QApplication::exec () at kernel/qapplication.cpp:3828
#82 0x000000000041b74d in main (argc=5, argv=0x7fff4036fd18) at /build/buildd/muon-2.0.0/installer/main.cpp:71

Reported using DrKonqi
Comment 1 Aleix Pol 2015-01-14 17:49:13 UTC
Git commit 1bd7d81167eb6d46deea2f1b52d4d9c4a2a577d3 by Aleix Pol.
Committed on 14/01/2015 at 17:47.
Pushed by apol into branch 'master'.

Fetch the package before finding the executables

M  +1    -1    libmuon/backends/ApplicationBackend/Application.cpp

http://commits.kde.org/muon/1bd7d81167eb6d46deea2f1b52d4d9c4a2a577d3
Comment 2 Aleix Pol 2015-01-14 17:49:52 UTC
*** Bug 326923 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2015-01-14 17:51:46 UTC
Git commit 35da0f7870bf3b44122fe41d5d3faed172b50957 by Aleix Pol.
Committed on 14/01/2015 at 17:47.
Pushed by apol into branch 'Plasma/5.2'.

Fetch the package before finding the executables

M  +1    -1    libmuon/backends/ApplicationBackend/Application.cpp

http://commits.kde.org/muon/35da0f7870bf3b44122fe41d5d3faed172b50957