Fetch the package before finding the executables

BUG: 319006