libmuon/backends/ApplicationBackend/Application.cpp
@@ -446,7 +446,7 @@ void Application::clearPackage()
 QVector<KService::Ptr> Application::findExecutables() const
 {
     QVector<KService::Ptr> ret;
-    foreach (const QString &desktop, m_package->installedFilesList().filter(QRegExp(".+\\.desktop$", Qt::CaseSensitive))) {
+    foreach (const QString &desktop, package()->installedFilesList().filter(QRegExp(".+\\.desktop$", Qt::CaseSensitive))) {
         // Important to use serviceByStorageId to ensure we get a service even
         // if the KSycoca database doesn't have our .desktop file yet.
         KService::Ptr service = KService::serviceByStorageId(desktop);
